[package]
name = "kv-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
criterion = "0.5.1"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.22"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
thiserror = "2.0.9"
